...
                                <rect key="frame" x="40" y="108" width="106.5" height="31"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="tinted" title="Network Call"/>
                                <connections>
                                    <action selector="networkCallClicked:" destination="SkV-mk-1LJ" eventType="touchUpInside" id="WnP-WE-Za0"/>
...
                                <rect key="frame" x="172.5" y="108" width="69" height="31"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="tinted" title="Person"/>
                                <connections>
                                    <segue destination="NVZ-Nj-K6Z" kind="show" id="C7g-7M-AyD"/>
...
                                <rect key="frame" x="134" y="88" width="146" height="31"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="tinted" title="Person Json"/>
                                <connections>
                                    <action selector="personClicked:" destination="NVZ-Nj-K6Z" eventType="touchUpInside" id="CO6-D9-efh"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="ritika@gmail.com" borderStyle="roundedRect" placeholder="Email Id" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hH0-Ci-eRq">
                                <rect key="frame" x="20" y="149" width="374" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                </variation>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="rani16" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1t4-rR-bQO">
                                <rect key="frame" x="20" y="203" width="374" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <rect key="frame" x="45" y="297" width="124.5" height="33"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Login">
                                    <fontDescription key="titleFontDescription" type="system" pointSize="16"/>
                                </buttonConfiguration>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Sign Up">
                                    <fontDescription key="titleFontDescription" type="system" pointSize="20"/>
                                </buttonConfiguration>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kyO-T9-hHY">
                                <rect key="frame" x="20" y="135" width="374" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                </variation>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Mobile" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0pa-AK-8Xj">
                                <rect key="frame" x="20" y="243" width="374" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="v50-He-6jI">
                                <rect key="frame" x="20" y="351" width="374" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Employees" id="FhM-jb-waa"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="g62-tX-XsA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
